# Plant-disease-solution

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  PROJECT_STATUS.md  README.md  README_DOCKER.md  REPOSITORY_SUMMARY.md  SLACK_SETUP_GUIDE.md  TECHNICAL_ARCHITECTURE.md  USER_EXPERIENCE_FLOW.md  WINDOWS_QUICK_START.md  WINDOWS_SETUP_GUIDE.md  create_data.py  docker-compose.yml  notes.txt  setup.bat  setup.sh  train_advanced_model.ipynb
.github/workflows/: ci-cd.yml  ci.yml
Plant-Disease-Detection-and-Solution/FarmerFriendApp/gradle/wrapper/: gradle-wrapper.properties
android_app/: build.gradle
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/assets/: DISEASE_DATABASE.json  solutions.json
android_app/app/src/main/java/devilstudio/com/farmerfriend/: FarmerFriendApplication.kt  MainActivity.kt
android_app/app/src/main/java/devilstudio/com/farmerfriend/data/model/: DiseaseResult.kt
android_app/app/src/main/java/devilstudio/com/farmerfriend/di/: AppModule.kt
android_app/app/src/main/java/devilstudio/com/farmerfriend/ml/: PlantDiseaseClassifier.kt
android_app/app/src/main/res/layout/: activity_main.xml
android_app/app/src/main/res/values/: colors.xml
backend/: Dockerfile  Pipfile  backend_output.txt  main.py  pyproject.toml  requirements.txt
docs/: ALL_FILES_READY.md  IMPLEMENTATION_CODE.js  IMPLEMENTATION_ROADMAP.md  START_HERE.md
web_app/: Dockerfile  app.py  frontend_output.txt  requirements.txt  styles.css
(+2 files in other folders)
