[project]
name = "plant-detection-backend"
version = "0.1.0"
description = "Backend for Plantify"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "tflite-runtime==2.14.0",
    "pillow",
    "numpy",
    "python-multipart",
    "pydantic",
    "google-generativeai"
]
